--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.3.72"
+    ext.kotlin_version = '1.3.72'
+
+    ext.lifecycle_version = '2.2.0'
 
     ext.rx_java_version = '2.2.9'
     ext.rx_android_version = '2.1.1'
     ext.rx_kotlin_version = '2.2.0'
+
+    ext.okHttp_version = '4.2.1'
+    ext.okHttpinterceptor_version = '4.2.1'
+    ext.retrofit_version = '2.9.0'
+
+    ext.room_version = '2.2.5'
+
+    ext.timber_version = "4.7.1"
+
+    ext.koin_version = "2.1.5"
+    ext.koin_architecture_version = "0.8.2"
 
     repositories {
         google()
@@ -13,9 +26,9 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+
     }
 }
 
